force-app/main/default/objects/User/fields/BSA__c.field-meta.xml
<CustomField>
    <fullName>BSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BSA</label>
    <type>Checkbox</type>
</CustomField>