force-app/main/default/objects/User/fields/Lightning_URL__c.field-meta.xml
<CustomField>
    <fullName>Lightning_URL__c</fullName>
    <formula>HYPERLINK(
    &quot;https://hyke.lightning.force.com/lightning/r/USer/&quot; &amp; Id &amp; &quot;/view&quot;,&quot;https://hyke.lightning.force.com/lightning/r/USer/&quot; &amp; Id &amp; &quot;/view&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lightning URL</label>
    <type>Text</type>
</CustomField>