force-app/main/default/objects/User/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <description>Team of the user</description>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>BK</fullName>
            </value>
            <value>
                <fullName>Ops</fullName>
            </value>
            <value>
                <fullName>Eng</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>