force-app/main/default/objects/User/listViews/No_activity_last_3_months.listView-meta.xml
<ListView>
    <fullName>No_activity_last_3_months</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_LOGIN</field>
        <operation>lessThan</operation>
        <value>10/1/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>No activity - last 3 months</label>
</ListView>